# ros_ws_tri_1

./: testing.txt
arduino_code/9Motor_Debug/: 9Motor_Debug.ino
arduino_code/MegaMotorDriver_Config1/: MegaMotorDriver_Config1.ino
arduino_code/ROS_Serial_1Motor/: ROS_Serial_1Motor.ino
arduino_code/ROS_Serial_9Motor/: ROS_Serial_9Motor.ino
arduino_code/ROS_Serial_Debugging/: ROS_Serial_Debugging.ino
arduino_code/ROS_Serial_basicSensors/: ROS_Serial_basicSensors.ino
data_logging_storage/: most_recent_data_nib.npy
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/basic_sensor_interface/: joint_sns.h  tendon_sns.h
devel/include/robotiq_2f_gripper_control/: Robotiq2FGripper_robot_input.h  Robotiq2FGripper_robot_output.h
devel/include/robotiq_3f_gripper_articulated_msgs/: Robotiq3FGripperRobotInput.h  Robotiq3FGripperRobotOutput.h
devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
devel/include/robotiq_ft_sensor/: ft_sensor.h  sensor_accessorRequest.h  sensor_accessorResponse.h
devel/include/tae_psoc/: SensorPacket.h  Sensor_Fast.h  Sensor_Indiv.h  cmdToPsoc.h
devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotModeDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  SetSpeedSliderFractionRequest.h  SetSpeedSliderFractionResponse.h  ToolDataMsg.h
devel/lib/pkgconfig/: basic_sensor_interface.pc  beginner_tutorials.pc  hand_interface.pc  master_state_machine.pc  motor_interface.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  (+26 more)
src/basic_sensor_interface/: CMakeLists.txt  package.xml
src/hand_interface/: CMakeLists.txt
src/master_state_machine/: CMakeLists.txt
src/old packages/tae_psoc/: CMakeLists.txt
src/old packages/tae_psoc/data/: result_190425_143011_demo.csv  result_190425_144855_demo.csv  result_190425_170600_demo.csv
src/old packages/tae_psoc/msg/: SensorPacket_prev  Sensor_Indiv.msg  cmdToPsoc.msg
src/old packages/tae_psoc/src/: psocPubSub.py  psocPubSub_ForDynamicReallocation.py  psocPubSub_ForMichael_FT.py  psocPubSub_WilsonHand.py  psocPubSub_previous.py  sensorReadDemo.py  sensorReadDemo_ManySensor_TwoMode_Wilson.py
src/tae_psoc/: setup.py
(+145 files in other folders)
